--- a/timer.css
+++ b/timer.css
@@ -1,6 +1,11 @@
+body {
+    background-color: #fafafa;
+}
+
 .timer {
     font-size: 64px;
     text-align: center;
+    margin-bottom: 20px;
 }
 .bs-docs-footer {
     padding-top: 50px;
