Chg: Adds a max height to the times container.

--- a/timer.css
+++ b/timer.css
@@ -2,7 +2,7 @@ body {
     background-color: #fafafa;
 }
 
-.timer {
+#timer {
     font-size: 64px;
     text-align: center;
     margin-bottom: 20px;
@@ -26,7 +26,12 @@ body {
     display: inline-block;
 }
 
-.bs-docs-footer {
+#times {
+    max-height: 200px;
+    overflow-x: scroll;
+}
+
+.footer {
     padding-top: 50px;
     padding-bottom: 50px;
     margin-top: 100px;
@@ -34,19 +39,19 @@ body {
     text-align: center;
     background-color: #2a2730;
 }
-.bs-docs-footer-links {
+.footer-links {
     padding-left: 0;
     margin-bottom: 20px;
 }
-.bs-docs-footer-links li {
+.footer-links li {
     display: inline-block;
 }
-.bs-docs-footer a {
+.footer a {
     color: #fff;
 }
 
 @media (min-width: 768px) {
-    .bs-docs-footer {
+    .footer {
         text-align: left;
     }
 }
