New: Uses Google Drive Picker to select a file from Google Drive when importing. Drive currently has a problem with exporting to CSV, so this is not yet implemented fully. Addresses #7.

--- a/css/timer.css
+++ b/css/timer.css
@@ -94,6 +94,10 @@ select.form-control {
     margin: 12px 0 0 0;
 }
 
+.picker.picker-dialog {
+    z-index: 9999;
+}
+
 #hint {
     display: none;
 }
