New: Prepares for #9.

--- a/css/timer.css
+++ b/css/timer.css
@@ -94,6 +94,15 @@ select.form-control {
     margin: 12px 0 0 0;
 }
 
+.picker.picker-dialog {
+    z-index: 9999;
+}
+
+#export-download,
+#import-error {
+    display: none;
+}
+
 #hint {
     display: none;
 }
