Chg: Replace bootstrap fonts with material fonts

--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -27,9 +27,18 @@ body {
     margin-left: 10px;
 }
 
+#timer-container {
+    margin-top: -10px;
+    text-align: center;
+}
 #timer {
     font-size: 96px;
-    margin-top: -10px;
+}
+
+.btn.btn-fab.btn-share {
+    vertical-align: super;
+    margin-left: 16px;
+    display: none;
 }
 
 .start-stop-container {
