--- a/src/css/media.css
+++ b/src/css/media.css
@@ -1,8 +1,3 @@
-@media (max-width: 1199px) {
-    .navbar .navbar-brand {
-        padding: 10px 15px 10px 30px;
-    }
-}
 @media (min-width: 768px) {
     .navbar .navbar-brand {
         padding-left: 30px;
@@ -15,6 +10,19 @@
     }
     #footer {
         text-align: left;
+    }
+}
+@media (max-width: 1199px) {
+    .navbar .navbar-brand {
+        padding: 10px 15px 10px 30px;
+    }
+    body #wrapper {
+        padding-top: 75px;
+    }
+}
+@media (max-width: 768px) {
+    body #wrapper {
+        padding-top: 65px;
     }
 }
 @media (max-width: 560px) {
