--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -66,7 +66,7 @@ body {
 #times button.btn-remove {
     margin: 0;
 }
-#template {
+.template {
     display: none;
 }
 #times .date {
@@ -154,6 +154,16 @@ body {
     float: left;
     padding: 5px 10px;
     width: 33.333%;
+}
+#stats .highlight .value {
+    font-weight: bold;
+}
+#statsHighlights .checkbox {
+    display: inline-block;
+    padding-right: 9px;
+}
+#statsHighlights .checkbox.template {
+    display: none;
 }
 
 .picker.picker-dialog {
