New: Add more stats, like median and standard deviation

--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -165,6 +165,12 @@ body {
 #statsHighlights .checkbox.template {
     display: none;
 }
+.stat.highlight .label.label-success {
+    background-color: #4caf50;
+}
+.stat .label.label-success {
+    background-color: #cecece;
+}
 
 .picker.picker-dialog {
     z-index: 9999;
