Chg: Add chartist chart for results

--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -165,6 +165,9 @@ body {
 #statsHighlights .checkbox.template {
     display: none;
 }
+#statsHighlights .checkbox {
+    width: 33%;
+}
 .stat.highlight .label.label-success {
     background-color: #4caf50;
 }
