New: Add top 3 subs and their respective counts
Adds the top 3 subs with the number of times that sub has been achieved.

--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -150,6 +150,18 @@ body {
     width: calc(100% - 40px);
 }
 
+.label {
+    font-size: 100%;
+}
+
+.sub.list-group-item {
+    display: inline-block;
+    padding: 5px 10px;
+}
+.sub.list-group-item .value {
+    font-weight: bold;
+}
+
 #stats .list-group-item {
     float: left;
     padding: 5px 10px;
