New: Add game switch for multiple scores
Closes #12.

--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -167,6 +167,12 @@ body {
     padding: 5px 10px;
     width: 33.333%;
 }
+#stats .stat {
+    display: none;
+}
+#stats .stat.highlight {
+    display: block;
+}
 #stats .highlight .value {
     font-weight: bold;
 }
