Chg: Simplify code and add more stats

--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -186,6 +186,9 @@ body {
 #statsHighlights .checkbox {
     width: 33%;
 }
+.checkbox > label {
+    white-space: nowrap;
+}
 .stat.highlight .label.label-success {
     background-color: #4caf50;
 }
