--- a/src/css/chartist-legend.css
+++ b/src/css/chartist-legend.css
@@ -1,26 +1,23 @@
 .ct-legend {
     position: relative;
+    float: right;
     z-index: 10;
     list-style: none;
     display: inline-block;
-    background: rgba(255, 255, 255, 0.8);
-    padding: 0 5px;
-    margin-left: 60px;
-    margin-top: 3px;
+    border-radius: 2px;
+    padding: 0;
 }
 
 .ct-legend li {
     position: relative;
-    padding-left: 20px;
+    padding-left: 15px;
     margin-left: 12px;
-    margin-bottom: 3px;
     cursor: pointer;
-    display: inline-block;
 }
 
 .ct-legend li:before {
-    width: 15px;
-    height: 15px;
+    width: 12px;
+    height: 12px;
     position: absolute;
     left: 0;
     content: '';
@@ -29,7 +26,7 @@
     margin-top: 3px;
 }
 
-.ct-legend    li.inactive:before {
+.ct-legend li.inactive:before {
     background: transparent;
 }
 
@@ -37,4 +34,16 @@
     position: absolute;
     top: 0;
     right: 0;
+}
+
+#ct-stats .ct-legend {
+    padding: 5px 15px 5px 5px;
+}
+#ct-stats .ct-legend li {
+    display: inline-block;
+}
+
+#ct-categories .ct-legend {
+    position: absolute;
+    right: -68px;
 }
