Chg: Hide sharing button
It doesn't do anything, yet.

--- a/src/css/sharing.css
+++ b/src/css/sharing.css
@@ -1,5 +1,9 @@
+.share .btn-share {
+    display: inline-block;
+}
+
 .btn.btn-fab.btn-share {
-    /*display: none;*/
+    display: none;
     position: absolute;
     bottom: -28px;
     right: 15px;
