--- a/src/css/chart.css
+++ b/src/css/chart.css
@@ -7,60 +7,48 @@
 }
 
 .ct-label {
-    color: rgba(0,0,0,.8);
-    font-size: 1rem;
+    color: rgba(0,0,0,.87);
+    font-size: 1.2rem;
 }
 
 #ct-stats .ct-series-a .ct-line {
     /* Set the colour of this series line */
-    stroke: rgba(255,255,255,0.84);
     stroke: #E8EAF6;
 }
 #ct-stats .ct-legend .ct-series-0:before {
-    background-color: rgba(255,255,255,1);
-    border-color: rgba(255,255,255,0.84);
     background-color: #E8EAF6;
     border-color: #E8EAF6;
 }
 
 #ct-stats .ct-series-b .ct-line {
     /* Set the colour of this series line */
-    stroke: #F48FB1;
-    stroke: #9FA8DA;
+    stroke: #448AFF;
 }
 #ct-stats .ct-legend .ct-series-1:before {
-    background-color: #F48FB1;
-    border-color: #F48FB1;
-    background-color: #9FA8DA;
-    border-color: #9FA8DA;
+    background-color: #448AFF;
+    border-color: #448AFF;
 }
 
 #ct-stats .ct-series-c .ct-line {
     /* Set the colour of this series line */
-    stroke: #90CAF9;
-    stroke: #5C6BC0;
+    stroke: #69F0AE;
 }
 #ct-stats .ct-legend .ct-series-2:before {
-    background-color: #90CAF9;
-    border-color: #90CAF9;
-    background-color: #5C6BC0;
-    border-color: #5C6BC0;
+    background-color: #69F0AE;
+    border-color: #69F0AE;
 }
 
 #ct-stats .ct-series-d .ct-line {
     /* Set the colour of this series line */
-    stroke: #80CBC4;
-    stroke: #3949AB;
+    stroke: #E040FB;
 }
 #ct-stats .ct-legend .ct-series-3:before {
-    background-color: #80CBC4;
-    border-color: #80CBC4;
-    background-color: #3949AB;
-    border-color: #3949AB;
+    background-color: #E040FB;
+    border-color: #E040FB;
 }
 
 #ct-stats .ct-grid {
-    stroke: rgba(255,255,255,.8);
+    stroke: rgba(255,255,255,.2);
     stroke-width: 1px;
     stroke-dasharray: 0;
 }
@@ -81,43 +69,43 @@
 }
 
 .ct-series-a .ct-slice-donut {
-    stroke: #C5CAE9;
+    stroke: #448AFF;
 }
 #ct-categories .ct-legend .ct-series-0:before {
-    background-color: #C5CAE9;
-    border-color: #C5CAE9;
+    background-color: #448AFF;
+    border-color: #448AFF;
 }
 
 .ct-series-b .ct-slice-donut {
-    stroke: #7986CB;
+    stroke: #69F0AE;
 }
 #ct-categories .ct-legend .ct-series-1:before {
-    background-color: #7986CB;
-    border-color: #7986CB;
+    background-color: #69F0AE;
+    border-color: #69F0AE;
 }
 
 .ct-series-c .ct-slice-donut {
-    stroke: #3F51B5;
+    stroke: #E040FB;
 }
 #ct-categories .ct-legend .ct-series-2:before {
-    background-color: #3F51B5;
-    border-color: #3F51B5;
+    background-color: #E040FB;
+    border-color: #E040FB;
 }
 
 .ct-series-d .ct-slice-donut {
-    stroke: #303F9F;
+    stroke: #FF5252;
 }
 #ct-categories .ct-legend .ct-series-3:before {
-    background-color: #303F9F;
-    border-color: #303F9F;
+    background-color: #FF5252;
+    border-color: #FF5252;
 }
 
 .ct-series-e .ct-slice-donut {
-    stroke: #1A237E;
+    stroke: #FFAB40;
 }
 #ct-categories .ct-legend .ct-series-4:before {
-    background-color: #1A237E;
-    border-color: #1A237E;
+    background-color: #FFAB40;
+    border-color: #FFAB40;
 }
 
 /*
@@ -126,8 +114,13 @@
 #stats-weekdays {
     display: inline-block;
     position: absolute;
+    height: 100px;
     right: 0;
     left: 255px;
+}
+
+#ct-weekdays {
+    height: 100%;
 }
 
 #ct-weekdays .ct-grids {
@@ -136,5 +129,5 @@
 
 #ct-weekdays .ct-series .ct-bar {
     stroke-width: 40px;
-    stroke: #303F9F;
+    stroke: #448AFF;
 }
