--- a/src/css/core.chart.css
+++ b/src/css/core.chart.css
@@ -8,7 +8,6 @@
 
 .ct-label {
     color: rgba(0,0,0,.87);
-    font-size: 1.2rem;
 }
 
 #ct-stats .ct-series-a .ct-line {
@@ -130,4 +129,55 @@
 #ct-weekdays .ct-series .ct-bar {
     stroke-width: 40px;
     stroke: #448AFF;
+}
+
+.ct-legend {
+    position: relative;
+    float: right;
+    z-index: 10;
+    list-style: none;
+    display: inline-block;
+    border-radius: 2px;
+    padding: 0;
+    margin: 0;
+}
+
+.ct-legend li {
+    position: relative;
+    padding-left: 15px;
+    margin-left: 12px;
+    cursor: pointer;
+}
+
+.ct-legend li:before {
+    width: 12px;
+    height: 12px;
+    position: absolute;
+    left: 0;
+    content: '';
+    border: 3px solid transparent;
+    border-radius: 2px;
+    margin-top: 3px;
+}
+
+.ct-legend li.inactive:before {
+    background: transparent;
+}
+
+.ct-legend.ct-legend-inside {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+#ct-stats .ct-legend {
+    padding: 5px 15px 5px 5px;
+}
+#ct-stats .ct-legend li {
+    display: inline-block;
+}
+
+#ct-categories .ct-legend {
+    position: absolute;
+    right: -68px;
 }
