--- a/css/cube-timer.css
+++ b/css/cube-timer.css
@@ -215,18 +215,23 @@
     display: none;
 }
 
+.btn-close {
+    padding: 0;
+}
+
 /*
  * Navigation bar
  */
-.material nav {
-    /*background-color: #3F51B5;
-    color: rgba(255,255,255,0.84);*/
-}
-.material nav .brand-logo {
+nav .brand-logo {
+    background: url(../img/icon-128.png) no-repeat left center;
+    background-size: 28px;
+    margin-left: 15px;
+    padding-left: 33px;
     font-size: 18px;
 }
-.material nav.main-nav .brand-logo,
-.material nav.main-nav ul a {
+
+nav.main-nav .brand-logo,
+nav.main-nav ul a {
     color: rgba(255,255,255,.84);
 }
 
@@ -239,6 +244,27 @@
     display: none;
 }
 
+th.date,
+td.date {
+    white-space: nowrap;
+}
+
+th.actions,
+td.actions {
+    width: 75px;
+}
+#times button.btn-remove {
+    margin: 0;
+}
+#timer-container {
+    margin-top: -17px;
+    text-align: center;
+}
+#timer {
+    font-size: 96px;
+}
+
+
 button:focus {
     background-color: #eee;
 }
@@ -246,6 +272,13 @@ button:focus {
     /* The alpha value allows the text and background color
     of the button to still show through. */
     background-color: rgba(63, 81, 181, 0.65);
+}
+.card-timer .card-content {
+    padding: 0;
+}
+.start-stop-container .start span,
+.start-stop-container .stop span {
+    font-size: 18px;
 }
 
 @font-face {
@@ -326,36 +359,6 @@ select.form-control {
     /*box-shadow: 0 3px 4.5px 0 rgba(0, 0, 0, 0.12), 0 10px 10px 0 rgba(0, 0, 0, 0.24);*/
 }
 
-.burst-12 {
-    text-align: center;
-}
-.burst-12,
-.burst-12:before,
-.burst-12:after {
-    background-color: #E91E63;
-    width: 40px;
-    height: 40px;
-    position: absolute;
-}
-.burst-12:before,
-.burst-12:after {
-    content: "";
-    top: 0;
-    left: 0;
-}
-.burst-12:before {
-    -webkit-transform: rotate(30deg);
-       -moz-transform: rotate(30deg);
-        -ms-transform: rotate(30deg);
-         -o-transform: rotate(30deg);
-}
-.burst-12:after {
-    -webkit-transform: rotate(60deg);
-       -moz-transform: rotate(60deg);
-        -ms-transform: rotate(60deg);
-         -o-transform: rotate(60deg);
-}
-
 html,
 body {
     font-family: "Roboto-Light", sans-serif;
@@ -391,19 +394,20 @@ body {
 }
 html,
 body {
-    overflow-y: visible;
-    height: 100%;
 }
 
 .container .credit {
     margin: 20px 0;
 }
 
-nav .brand-logo {
-    background: url(../img/icon-128.png) no-repeat left center;
-    background-size: 28px;
-    margin-left: 15px;
-    padding-left: 33px;
+.btn-small {
+    line-height: 20px;
+    height: 20px;
+    padding: 0 1.5rem;
+}
+.condensed th,
+.condensed td {
+    padding: 3px 5px;
 }
 
 .card .card-title {
@@ -411,14 +415,6 @@ nav .brand-logo {
 }
 .relative {
     position: relative;
-}
-
-#timer-container {
-    margin-top: -10px;
-    text-align: center;
-}
-#timer {
-    font-size: 96px;
 }
 
 .achievement {
@@ -455,16 +451,9 @@ nav .brand-logo {
     display: inline-block;
 }
 
-#times button.btn-remove {
-    margin: 0;
-}
 .template {
     display: none;
 }
-#times .date {
-    white-space: nowrap;
-}
-
 .results-dialog .modal-dialog,
 .results-dialog .modal-content {
     height: calc(100% - 60px);
@@ -487,7 +476,6 @@ nav .brand-logo {
     /* 100% = dialog height, 110px = header + footer */
     max-height: calc(100% - 110px);
     padding-bottom: 0;
-    overflow-y: scroll;
 }
 
 .card-image .btn-group {
@@ -511,13 +499,6 @@ nav .brand-logo {
     margin-left: 33.333333333%;
 }
 
-.index.row-action-primary {
-    float: left;
-    margin-top: 6px;
-    color: #777;
-    min-width: 40px;
-    text-align: right;
-}
 .list-group .list-group-item {
     padding: 0;
 }
@@ -544,6 +525,14 @@ nav .brand-logo {
 
 .label {
     font-size: 100%;
+    background: #304ffe;
+    color: #f5f5f5;
+    font-weight: bold;
+    padding: 3px 8px;
+    border-radius: 2px;
+}
+.label-success {
+    background: #00c853;
 }
 
 .sub.list-group-item {
