Chg: Refactor some code #cosmetic

--- a/src/css/core.navbar.css
+++ b/src/css/core.navbar.css
@@ -1,15 +1,16 @@
 /*
  * Navigation bar
  */
-.material nav {
-    /*background-color: #3F51B5;
-    color: rgba(255,255,255,0.84);*/
-}
-.material nav .brand-logo {
+nav .brand-logo {
+    background: url(../img/icon-128.png) no-repeat left center;
+    background-size: 28px;
+    margin-left: 15px;
+    padding-left: 33px;
     font-size: 18px;
 }
-.material nav.main-nav .brand-logo,
-.material nav.main-nav ul a {
+
+nav.main-nav .brand-logo,
+nav.main-nav ul a {
     color: rgba(255,255,255,.84);
 }
 
