--- a/src/css/core.results.css
+++ b/src/css/core.results.css
@@ -2,6 +2,24 @@
 .main-nav .results-button {
     display: none;
 }
-.table-condensed td {
-    padding: 0 5px;
+
+th.date,
+td.date {
+    white-space: nowrap;
 }
+
+th.actions,
+td.actions {
+    width: 75px;
+}
+#times button.btn-remove {
+    margin: 0;
+}
+#timer-container {
+    margin-top: -17px;
+    text-align: center;
+}
+#timer {
+    font-size: 96px;
+}
+
