Fix: Re-enable navbar game changing
Navbar has been moved to the left side for all screen widths. Cloning and adapting the game-list is not needed any longer.

--- a/src/css/core.stopwatch.css
+++ b/src/css/core.stopwatch.css
@@ -17,3 +17,13 @@ button:focus {
 .start-stop-container .stop span {
     font-size: 18px;
 }
+#times button.btn-remove {
+    margin: 0;
+}
+#timer-container {
+    margin-top: -17px;
+    text-align: center;
+}
+#timer-display {
+    font-size: 96px;
+}
