--- a/src/css/core.navbar.css
+++ b/src/css/core.navbar.css
@@ -8,18 +8,19 @@ nav .brand-logo {
     padding-left: 33px;
     margin-left: 72px;
     */
+    display: none;
     position: static;
     font-size: 20px;
 }
 .page-title {
-    border-left: 1px solid rgba(255,255,255,0.2);
-    padding-left: 24px;
-    margin-left: 24px;
     line-height: 32px;
-    font-size: 16px;
+    font-size: 20px;
+}
+nav .brand-logo,
+.page-title {
+    color: #fff;
 }
 
-nav.main-nav .brand-logo,
 nav.main-nav ul a {
     color: rgba(255,255,255,.84);
 }
@@ -76,8 +77,17 @@ nav a.button-collapse i {
     }
 }
 @media only screen and (min-width: 601px) {
+    nav .brand-logo {
+        display: inline-block;
+    }
     .page-title {
+        border-left: 1px solid rgba(255,255,255,0.2);
+        padding-left: 24px;
+        margin-left: 24px;
         font-size: 20px;
+    }
+    .main-nav {
+        margin-right: 16px;
     }
     .side-nav {
         top: 64px;
