--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -133,14 +133,15 @@ body {
 
 .label {
     font-size: 100%;
-    background: #304ffe;
+    background: #8c9eff;
     color: #f5f5f5;
     font-weight: bold;
     padding: 3px 8px;
     border-radius: 2px;
 }
 .label-success {
-    background: #00c853;
+    background: #b9f6ca;
+    color: #388e3c;
 }
 
 .sub.list-group-item {
