--- a/css/cube-timer.css
+++ b/css/cube-timer.css
@@ -234,6 +234,10 @@
 /*
  * Navigation bar
  */
+body.menu-active #wrapper {
+    padding-left: 0px;
+}
+
 nav .brand-logo {
     /*
     background: url(../img/icon-128.png) no-repeat left center;
@@ -241,18 +245,19 @@ nav .brand-logo {
     padding-left: 33px;
     margin-left: 72px;
     */
+    display: none;
     position: static;
     font-size: 20px;
 }
 .page-title {
-    border-left: 1px solid rgba(255,255,255,0.2);
-    padding-left: 24px;
-    margin-left: 24px;
     line-height: 32px;
-    font-size: 16px;
+    font-size: 20px;
+}
+nav .brand-logo,
+.page-title {
+    color: #fff;
 }
 
-nav.main-nav .brand-logo,
 nav.main-nav ul a {
     color: rgba(255,255,255,.84);
 }
@@ -309,8 +314,17 @@ nav a.button-collapse i {
     }
 }
 @media only screen and (min-width: 601px) {
+    nav .brand-logo {
+        display: inline-block;
+    }
     .page-title {
+        border-left: 1px solid rgba(255,255,255,0.2);
+        padding-left: 24px;
+        margin-left: 24px;
         font-size: 20px;
+    }
+    .main-nav {
+        margin-right: 16px;
     }
     .side-nav {
         top: 64px;
@@ -324,6 +338,9 @@ nav a.button-collapse i {
     }
 }
 @media only screen and (min-width: 993px) {
+    body.menu-active #wrapper {
+        padding-left: 240px;
+    }
     .side-nav {
         background-color: transparent;
         padding-top: 16px;
@@ -344,14 +361,51 @@ nav a.button-collapse i {
     display: none;
 }
 
-th.date,
-td.date {
+#results-content .collection .collection-item.avatar {
+    min-height: auto;
+}
+.collection .collection-item.avatar i.circle {
+    top: 9px;
+    left: 22px;
+    width: 28px;
+    height: 28px;
+    line-height: 28px;
+}
+.collection .collection-item.avatar .secondary-content {
+    top: 11px;
+}
+#results-content .index {
+    display: inline-block;
+    width: 50px;
+}
+#results-content .value {
+    display: inline-block;
+    width: 84px;
+    font-weight: bold;
+}
+#results-content li.entry .secondary-content {
+    display: none;
+}
+#results-content li.entry:hover .secondary-content {
+    display: inline-block;
+}
+.result-header {
+    margin: 20px 0 8px;
+    padding: 0 24px;
+        line-height: 24px;
+        color: #616161;
+}
+
+#results-content .date {
     white-space: nowrap;
 }
 
 th.actions,
 td.actions {
     width: 75px;
+}
+#results-content button.btn-remove {
+    margin: 0;
 }
 
 .card-timer {
@@ -372,9 +426,6 @@ button:focus {
 .start-stop-container .start span,
 .start-stop-container .stop span {
     font-size: 18px;
-}
-#times button.btn-remove {
-    margin: 0;
 }
 #timer-container {
     margin-top: -17px;
@@ -643,14 +694,15 @@ body {
 
 .label {
     font-size: 100%;
-    background: #304ffe;
+    background: #8c9eff;
     color: #f5f5f5;
     font-weight: bold;
     padding: 3px 8px;
     border-radius: 2px;
 }
 .label-success {
-    background: #00c853;
+    background: #b9f6ca;
+    color: #388e3c;
 }
 
 .sub.list-group-item {
