--- a/src/css/core.results.css
+++ b/src/css/core.results.css
@@ -3,17 +3,17 @@
     display: none;
 }
 
-#results-content .collection .collection-item.avatar {
+.collection.collection-small .collection-item.avatar {
     min-height: auto;
 }
-.collection .collection-item.avatar i.circle {
+.collection.collection-small .collection-item.avatar i.circle {
     top: 9px;
     left: 22px;
     width: 28px;
     height: 28px;
     line-height: 28px;
 }
-.collection .collection-item.avatar .secondary-content {
+.collection.collection-small .collection-item.avatar .secondary-content {
     top: 11px;
 }
 #results-content .index {
@@ -25,10 +25,10 @@
     width: 84px;
     font-weight: bold;
 }
-#results-content li.entry .secondary-content {
+.collection-small li.entry .secondary-content {
     display: none;
 }
-#results-content li.entry:hover .secondary-content {
+.collection-small li.entry:hover .secondary-content {
     display: inline-block;
 }
 .result-header {
