New: Move fanout on write to Firebase functions

--- a/src/css/zmedia.css
+++ b/src/css/zmedia.css
@@ -55,6 +55,9 @@
     #timer-display {
         font-size: 84px;
     }
+	.ct-major-twelfth::before {
+		padding-bottom: 66.6666%;
+	}
 }
 @media (max-width: 380px) {
     #timer-display {
