--- a/src/css/material.css
+++ b/src/css/material.css
@@ -41,3 +41,20 @@ select.form-control {
 .card-stats .card-image {
     padding: 10px 15px;
 }
+.collection .collection-item.active {
+	background-color: #3f51b5;
+}
+.btn-hover {
+    padding: 0 0.6rem;
+}
+.collection-item:hover .btn-hover {
+	visibility: visible;
+	color: #757575;
+}
+.collection-item .btn-flat:hover {
+	background-color: transparent;
+	color: #343434;
+}
+.collection-item .btn-hover:hover {
+	color: #424242;
+}
