New: Migrate to Webpack

--- a/src/css/core.chart.css
+++ b/src/css/core.chart.css
@@ -72,6 +72,10 @@
     position: relative;
 }
 
+.ct-line,
+.ct-slice-donut {
+    fill: transparent;
+}
 .ct-series-a .ct-slice-donut {
     stroke: #448AFF;
 }
